# quizverse

./: .coverage  .gitignore  BADGES_SETUP_GUIDE.md  BADGE_TRANSLATIONS_GUIDE.md  CLOUDINARY_URLS_GUIDE.md  CONFIGURAR_BACKGROUND_THEME.md  CONFIGURE_FLAMENGO.md  CONFIG_NUBODY.md  CUSTOM_CATEGORY_COLORS_GUIDE.md  DEPLOY_HEROKU.md  DNS_CONFIG_QUIZVERSO.md  ENV_EXAMPLE.txt  GODADDY_DNS_CONFIG.md  GUIA_CRIAR_NOVO_TEMA.md  GUIDE_NEW_QUIZ_THEME.md  ICON_SYSTEM_GUIDE.md  MIGRATION_PLAN_QUIZ.md  Makefile  POKEMON_QUIZ_GUIDE.md  POKEMON_SLUGS_REFERENCE.md  Procfile  QUICK_START_TESTS.md  QUIZ_IMPLEMENTATION.md  README.md  README_TESTS.md  ROOT_THEMES_SETUP.md  TESTING_GUIDE.md  TRANSLATION.md  TRANSLATION_SYSTEM.md  ak47_urls.json  boruto_characters.json  chatgpt_prompt_multilingual.txt  clean_all_tibia_categories.py  clean_all_tibia_final.py  clean_tibia_json.py  clean_tibia_json_v2.py  clean_tibia_json_v3.py  cloudinary_get_urls.py  cloudinary_list_folders.py  cloudinary_pokemon_urls.json  (+65 more)
build_quiz/: knives_quiz.json
cloudinary_urls/: AWP.json
cs2_skins/: ak_47.json  aug.json  awp.json  bayonet.json  bloodhound_gloves.json  bowie_knife.json  broken_fang_gloves.json  butterfly_knife.json  charm.json  classic_knife.json  cz75_auto.json  desert_eagle.json  driver_gloves.json  dual_berettas.json  falchion_knife.json  famas.json  five_seven.json  flip_knife.json  g3sg1.json  galil_ar.json  glock_18.json  gut_knife.json  hand_wraps.json  huntsman_knife.json  hydra_gloves.json  karambit.json  kukri_knife.json  m249.json  m4a1_s.json  m4a4.json  m9_bayonet.json  mac_10.json  mag_7.json  moto_gloves.json  mp5_sd.json  mp7.json  mp9.json  music_kit.json  navaja_knife.json  negev.json  (+26 more)
fixtures/: load_fixtures.py
fixtures/questions/: ak_questions.json  awp_questions.json  desert-eagle_questions.json  glock-18_questions.json  heroi_questions.json  herois_questions.json  luvas_questions.json  m4a1s_questions.json  m4a4_questions.json  pokemons_questions.json  usps_questions.json
fixtures/quizzes/: ak_quiz_group.json  ak_quizzes.json  awp_quiz_group.json  awp_quizzes.json  criaturas_quiz_group.json  criaturas_quizzes.json  facas_quiz_group.json  (+21 more)
pokemon_gen1/: pokemon_data.json
quiz/: settings.py  urls.py
quizzes/: admin.py  apps.py  decorators.py  image_proxy.py  models.py  services.py  signals.py  translations.py  urls.py  views.py
setup/: create_questions.py  create_quiz.py  create_theme.py  optimize_cloudinary_urls.py  upload_cloudinary.py
setup_data/: 00_root_pokemon.py  00_root_pokemon_quizgroup.py  00_root_pokemon_theme.py  00_root_themes.py  00_template_badges.py  01_pokemon.py  01_pokemon_badges copy.py  01_setup_root_themes.py  02_aks.py  02_counter_strike_theme.py  02_setup_sports_subcategories.py  03_aks.py  README.md  __init__.py  populate_description_templates.py  restore_essential_data.py  run_all.py  update_quiz_descriptions.py
tibia files/: armaduras.html  botas.html  calcas.html  clavas.html  elmos.html  espadas.html  machados.html  varinhas.html
tibia_json/: armaduras_items.json  botas_items.json  calcas_items.json  clavas_items.json  elmos_items.json  espadas_items.json  machados_items.json  varinhas_items.json
(+121 files in other folders)
