[project]
name = "quiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-allauth[socialaccount]>=65.3.0",
    "requests>=2.32.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "dj-database-url>=2.1.0",
    "psycopg2-binary>=2.9.9",
]
