[project]
name = "quiz"
version = "0.1.0"
description = "Quiz application with Django"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "django>=5.2.7",
    "django-allauth[socialaccount]>=65.3.0",
    "django-ratelimit>=4.1.0",
    "requests>=2.32.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "dj-database-url>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "sentry-sdk[django]>=2.0.0",
    "cloudinary>=1.44.1",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["quiz", "quizzes"]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "coverage[toml]>=7.4.0",

    # Code Quality
    "flake8>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",

    # Security
    "bandit>=1.7.6",
    "safety>=3.0.0",

    # Development Tools
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "quiz.settings"
python_files = ["test_*.py"]
python_classes = ["*Test"]
python_functions = ["test_*"]
testpaths = ["quizzes/tests"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=quizzes",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-branch",
]

[tool.coverage.run]
source = ["quizzes"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/admin.py",
    "*/apps.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "quizzes.*"
ignore_errors = false

[tool.django-stubs]
django_settings_module = "quiz.settings"
